@@ -84,6 +84,7 @@ namespace Orthanc
     std::string postData(call.GetBodyData(), call.GetBodySize());
 
     DicomInstanceToStore toStore;
+    toStore.SetRestOrigin(call);
     toStore.SetBuffer(postData);
 
     std::string publicId;
